# ui_lab3

./: README.md
android_client/: AnswerPageWidget.cpp  AnswerPageWidget.h  AnswerWidget.cpp  AnswerWidget.h  CMakeLists.txt  Client.cpp  Client.h  ClientApi.cpp  ClientApi.h  ConnectWidget.cpp  ConnectWidget.h  MainWindow.cpp  MainWindow.h  PostAnswerWidget.cpp  PostAnswerWidget.h  PostQuestionWidget.cpp  PostQuestionWidget.h  QuestionListWidget.cpp  QuestionListWidget.h  QuestionWidget.cpp  QuestionWidget.h  QuestionsWidget.cpp  QuestionsWidget.h  SignInWidget.cpp  SignInWidget.h  SignUpWidget.cpp  SignUpWidget.h  main.cpp
js_backend/: Question.ts  Questions.ts  package-lock.json  package.json  server.js  test.py  tsconfig.json
